# assignments

./: LICENSE  README.md  pyproject.toml  requirements.txt
assignment_0/: README.md
assignment_1/: README.md  graph_processing.py
assignment_2/: README.md
assignment_3/: README.md
learning_materials/: README.md
learning_materials/mocking/: mocking.py  patch.py
learning_materials/oop_vs_functional/: functional.py  oop.py
learning_materials/vectorization_example/: vectorization_example.ipynb
